// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="a b c d"
>
  Hello
</div>
`;

exports[`should render 1 button 1`] = `
<div
  className="a b c d"
>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ae af ag ah ai aj ak al b am an ao ap aq ar as at au av"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 1 button 2`] = `
"
.a {
  display: inline-block
}

.b {
  position: relative
}

.c {
  vertical-align: middle
}

.d {
  white-space: nowrap
}

.e:hover {
  background-color: #2869a2
}

.f:hover {
  border-color: #215685
}

.g:hover {
  color: #fff
}

.h:active {
  background-color: #215685
}

.i:active {
  border-color: #1a4468
}

.j:active {
  color: #fff
}

.k:focus {
  background-color: #2f7bbf
}

.l:focus {
  color: #fff
}

.m:focus {
  border-color: #2869a2
}

.n[title] {
  pointer-events: none
}

.o {
  background-color: #2f7bbf
}

.p {
  border-bottom: 1px solid
}

.q {
  border-left: 0px
}

.r {
  border-right: 0px
}

.s {
  border-top: 0px
}

.t {
  border-color: #2869a2
}

.u {
  color: #fff
}

.v {
  cursor: pointer
}

.w {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.x {
  font-size: 0.9333333333333333rem
}

.y {
  font-weight: 400
}

.z {
  line-height: 1.2
}

.ab {
  margin-bottom: 0px
}

.ac {
  margin-right: 0px
}

.ae {
  margin-top: 0px
}

.af {
  margin-left: 0px
}

.ag {
  opacity: inherit
}

.ah {
  padding-bottom: 0.53em
}

.ai {
  padding-left: 1em
}

.aj {
  padding-right: 1em
}

.ak {
  padding-top: 0.6em
}

.al {
  pointer-events: auto
}

.am {
  border-top-right-radius: 2px
}

.an {
  border-top-left-radius: 0px
}

.ao {
  border-bottom-left-radius: 0px
}

.ap {
  border-bottom-right-radius: 2px
}

.aq {
  text-align: center
}

.ar {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.as {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.at {
  float: none
}

.au {
  max-width: initial
}

.av {
  width: auto
}
"
`;

exports[`should render 2`] = `
"
.a {
  display: inline-block
}

.b {
  position: relative
}

.c {
  vertical-align: middle
}

.d {
  white-space: nowrap
}
"
`;

exports[`should render 2 buttons 1`] = `
<div
  className="a b c d"
>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ae af ag ah ai aj ak al b am an ao ap aq ar as at au av"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ae af ag ah ai aj ak al b aw ax ay az aq ar as at au av"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 2 buttons 2`] = `
"
.a {
  display: inline-block
}

.b {
  position: relative
}

.c {
  vertical-align: middle
}

.d {
  white-space: nowrap
}

.e:hover {
  background-color: #2869a2
}

.f:hover {
  border-color: #215685
}

.g:hover {
  color: #fff
}

.h:active {
  background-color: #215685
}

.i:active {
  border-color: #1a4468
}

.j:active {
  color: #fff
}

.k:focus {
  background-color: #2f7bbf
}

.l:focus {
  color: #fff
}

.m:focus {
  border-color: #2869a2
}

.n[title] {
  pointer-events: none
}

.o {
  background-color: #2f7bbf
}

.p {
  border-bottom: 1px solid
}

.q {
  border-left: 0px
}

.r {
  border-right: 0px
}

.s {
  border-top: 0px
}

.t {
  border-color: #2869a2
}

.u {
  color: #fff
}

.v {
  cursor: pointer
}

.w {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.x {
  font-size: 0.9333333333333333rem
}

.y {
  font-weight: 400
}

.z {
  line-height: 1.2
}

.ab {
  margin-bottom: 0px
}

.ac {
  margin-right: 0px
}

.ae {
  margin-top: 0px
}

.af {
  margin-left: 0px
}

.ag {
  opacity: inherit
}

.ah {
  padding-bottom: 0.53em
}

.ai {
  padding-left: 1em
}

.aj {
  padding-right: 1em
}

.ak {
  padding-top: 0.6em
}

.al {
  pointer-events: auto
}

.am {
  border-top-right-radius: 0px
}

.an {
  border-top-left-radius: 2px
}

.ao {
  border-bottom-left-radius: 2px
}

.ap {
  border-bottom-right-radius: 0px
}

.aq {
  text-align: center
}

.ar {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.as {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.at {
  float: none
}

.au {
  max-width: initial
}

.av {
  width: auto
}

.aw {
  border-top-right-radius: 2px
}

.ax {
  border-top-left-radius: 0px
}

.ay {
  border-bottom-left-radius: 0px
}

.az {
  border-bottom-right-radius: 2px
}
"
`;

exports[`should render 3 buttons 1`] = `
<div
  className="a b c d"
>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ae af ag ah ai aj ak al b am an ao ap aq ar as at au av"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ae af ag ah ai aj ak al b am aw ax ap aq ar as at au av"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ae af ag ah ai aj ak al b ay aw ax az aq ar as at au av"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons 2`] = `
"
.a {
  display: inline-block
}

.b {
  position: relative
}

.c {
  vertical-align: middle
}

.d {
  white-space: nowrap
}

.e:hover {
  background-color: #2869a2
}

.f:hover {
  border-color: #215685
}

.g:hover {
  color: #fff
}

.h:active {
  background-color: #215685
}

.i:active {
  border-color: #1a4468
}

.j:active {
  color: #fff
}

.k:focus {
  background-color: #2f7bbf
}

.l:focus {
  color: #fff
}

.m:focus {
  border-color: #2869a2
}

.n[title] {
  pointer-events: none
}

.o {
  background-color: #2f7bbf
}

.p {
  border-bottom: 1px solid
}

.q {
  border-left: 0px
}

.r {
  border-right: 0px
}

.s {
  border-top: 0px
}

.t {
  border-color: #2869a2
}

.u {
  color: #fff
}

.v {
  cursor: pointer
}

.w {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.x {
  font-size: 0.9333333333333333rem
}

.y {
  font-weight: 400
}

.z {
  line-height: 1.2
}

.ab {
  margin-bottom: 0px
}

.ac {
  margin-right: 0px
}

.ae {
  margin-top: 0px
}

.af {
  margin-left: 0px
}

.ag {
  opacity: inherit
}

.ah {
  padding-bottom: 0.53em
}

.ai {
  padding-left: 1em
}

.aj {
  padding-right: 1em
}

.ak {
  padding-top: 0.6em
}

.al {
  pointer-events: auto
}

.am {
  border-top-right-radius: 0px
}

.an {
  border-top-left-radius: 2px
}

.ao {
  border-bottom-left-radius: 2px
}

.ap {
  border-bottom-right-radius: 0px
}

.aq {
  text-align: center
}

.ar {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.as {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.at {
  float: none
}

.au {
  max-width: initial
}

.av {
  width: auto
}

.aw {
  border-top-left-radius: 0px
}

.ax {
  border-bottom-left-radius: 0px
}

.ay {
  border-top-right-radius: 2px
}

.az {
  border-bottom-right-radius: 2px
}
"
`;

exports[`should render 3 buttons with spacing 1`] = `
<div
  className="a b c d"
>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ae af ag ah ai aj ak al b am an ao ap aq ar as"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ae at ag ah ai aj ak al b am an ao ap aq ar as"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ae at ag ah ai aj ak al b am an ao ap aq ar as"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons with spacing 2`] = `
"
.a {
  display: inline-block
}

.b {
  position: relative
}

.c {
  vertical-align: middle
}

.d {
  white-space: nowrap
}

.e:hover {
  background-color: #2869a2
}

.f:hover {
  border-color: #215685
}

.g:hover {
  color: #fff
}

.h:active {
  background-color: #215685
}

.i:active {
  border-color: #1a4468
}

.j:active {
  color: #fff
}

.k:focus {
  background-color: #2f7bbf
}

.l:focus {
  color: #fff
}

.m:focus {
  border-color: #2869a2
}

.n[title] {
  pointer-events: none
}

.o {
  background-color: #2f7bbf
}

.p {
  border-bottom: 1px solid
}

.q {
  border-left: 0px
}

.r {
  border-right: 0px
}

.s {
  border-top: 0px
}

.t {
  border-color: #2869a2
}

.u {
  color: #fff
}

.v {
  cursor: pointer
}

.w {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.x {
  font-size: 0.9333333333333333rem
}

.y {
  font-weight: 400
}

.z {
  line-height: 1.2
}

.ab {
  margin-bottom: 0px
}

.ac {
  margin-right: 0px
}

.ae {
  margin-top: 0px
}

.af {
  margin-left: 0px
}

.ag {
  opacity: inherit
}

.ah {
  padding-bottom: 0.53em
}

.ai {
  padding-left: 1em
}

.aj {
  padding-right: 1em
}

.ak {
  padding-top: 0.6em
}

.al {
  pointer-events: auto
}

.am {
  border-radius: 2px
}

.an {
  text-align: center
}

.ao {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.ap {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.aq {
  float: none
}

.ar {
  max-width: initial
}

.as {
  width: auto
}

.at {
  margin-left: 0.4rem
}
"
`;
